--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
     <script src="https://cdn.tailwindcss.com" defer></script>
     <script src="dist/app.js" defer></script>
+    <style>
+      html {
+        font-size: 20px;
+      }
+    </style>
   </head>
   <body>
     <div id="app" class="max-w-[40rem] m-auto"></div>
