add cache bust param

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- <link rel="icon" href=""> -->
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
     <script src="https://cdn.tailwindcss.com" defer></script>
-    <script src="dist/app.js" defer></script>
+    <script src="dist/app.js?v=0.0.1" defer></script>
     <style>
       html {
         font-size: 20px;
